# pato-gui

./: .dockerignore  .gitattributes  .gitignore  0.21  CHANGELOG.md  Dockerfile  MANIFEST.in  Makefile  README.md  complete  devbox.json  environment.yml  mypy.ini  pixi.toml  program.spec  pyproject-minimal.toml  pyproject.toml  pytest.ini  requirements.txt  setup.py
.devcontainer/: Dockerfile
docs/: index.md
src/: Makefile  about.py  oracle-tools-gui.py  oracle_tools_gui.py  oracle_tools_gui.spec  pato_gui.py  pato_gui.spec
src/pato_gui/: __init__.py  __main__.py  about.py  app.py  pato-gui.py  pom.py  program.py  pyinstaller.py  version.py
src/program/: Makefile  pato_gui.py  pato_gui.spec  pom.py  requirements.txt
src/utils/: about.py  pom.py
test/: test_cmd.py
tests/: test_cmd.py
