[tool.poetry]
name = "pato-gui"
version = "3.2.0"
description = "Paulissoft Application Tools for Oracle (PATO) GUI."
authors = ["Gert-Jan Paulissen <paulissoft@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
