[tool.poetry]
name = "pato-gui"
version = "4.0.1"
description = "Paulissoft Application Tools for Oracle (PATO) GUI."
authors = ["Gert-Jan Paulissen <paulissoft@gmail.com>"]
license = "MIT"
readme = ["README.md", "CHANGELOG.md"]
packages = [{include = "pato_gui", from = "src"}]
homepage = "https://paulissoft.github.io/pato-gui"
repository = "https://github.com/paulissoft/pato-gui"
keywords = ["packaging", "poetry"]
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
		'Development Status :: 6 - Mature',
    'Programming Language :: Python :: 3',
    'Natural Language :: English',
    'Topic :: Utilities',
    'Environment :: Console',
    'Intended Audience :: Developers',
    'Operating System :: OS Independent',
    'License :: OSI Approved :: MIT License'
]

[tool.poetry.scripts]
pato-gui-about = "pato_gui.about:main"
pato-gui-version = "pato_gui.about:version"
pato-gui-build = "pato_gui.pyinstaller:install"
pato-gui = "pato_gui.program:main"

[tool.poetry.dependencies]
wxpython = ">=4.1.0"
python = ">=3.8.1,<3.13"
pyinstaller = "6.1.0"
# pillow = "9.0.0"
gooey = ">1.0.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-flakes = "^4.0.5"
pytest-pycodestyle = "^2.3.1"
flake8 = "^6.1.0"
mypy = "^1.6.1"
twine = "^4.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Below pixi
[project]
name = "pato-gui"
version = "4.0.1"
description = "Paulissoft Application Tools for Oracle (PATO) GUI."
# authors = ["Gert-Jan Paulissen <paulissoft@gmail.com>"]
# license = "MIT"
readme = "README.md"
homepage = "https://paulissoft.github.io/pato-gui"
repository = "https://github.com/paulissoft/pato-gui"
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
		'Development Status :: 6 - Mature',
    'Programming Language :: Python :: 3',
    'Natural Language :: English',
    'Topic :: Utilities',
    'Environment :: Console',
    'Intended Audience :: Developers',
    'Operating System :: OS Independent',
    'License :: OSI Approved :: MIT License'
]
requires-python = ">=3.8.1,<3.13"
dependencies = ["gooey>1.0.8"]

#[build-system]
#build-backend = "hatchling.build"
#requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "osx-64", "win-64"]

[tool.pixi.pypi-dependencies]
pato-gui = { path = ".", editable = true }

[tool.pixi.tasks]
pato-gui-about = "pato_gui.about:main"
pato-gui-version = "pato_gui.about:version"
pato-gui-build = "pato_gui.pyinstaller:install"
pato-gui = "pato_gui.program:main"

[tool.pixi.dependencies]
wxpython = ">=4.1.0"
pyinstaller = ">=6.10.0,<7"

[tool.pixi.feature.dev.dependencies]
pytest = "*"
pytest-cov = "*"
pytest-flakes = "*"
pytest-pycodestyle = "*"
flake8 = "*"
mypy = "*"
twine = "*"

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }
